hphp/hack/test/typecheck/classname/bad_subclass.php.exp
File "bad_subclass.php", line 17, characters 7-12:
This object is of type BadSub (Typing[4110])
File "bad_subclass.php", line 17, characters 22-26:
It is incompatible with this object of type Super
because some declarations are incompatible.
Read the following to see why:
File "bad_subclass.php", line 8, characters 57-57:
This is an object of type I
File "bad_subclass.php", line 18, characters 48-53:
It is incompatible with an object of type C_notI
